GL: More color modes, add zero height, points mode: single points New default color mode (beside of legacy mode): Up to two bars are stacked with blue->green, green->red gradients from bottom to some constant heights. So top colors depend on relative bar heights.
New monochrome color modes: Monochrome gradient from dark to bright amber/blue/green.

New bar height setting 'Flat': Allow clean 2D views with changing bar top colors.

Points mode: Only draw one point at top mid.

--- a/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
+++ b/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
@@ -141,3 +141,31 @@ msgstr ""
 msgctxt "#30028"
 msgid "{0:d}"
 msgstr ""
+
+msgctxt "#30029"
+msgid "Colour mode"
+msgstr ""
+
+msgctxt "#30030"
+msgid "Legacy"
+msgstr ""
+
+msgctxt "#30031"
+msgid "Default"
+msgstr ""
+
+msgctxt "#30032"
+msgid "Flat"
+msgstr ""
+
+msgctxt "#30033"
+msgid "Amber"
+msgstr ""
+
+msgctxt "#30034"
+msgid "Blue"
+msgstr ""
+
+msgctxt "#30035"
+msgid "Green"
+msgstr ""
