GL: Add Bands setting and default to 32 Allow up to 128 x 128 bars.

--- a/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
+++ b/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
@@ -133,3 +133,11 @@ msgstr ""
 msgctxt "#30026"
 msgid "Rotation speed"
 msgstr ""
+
+msgctxt "#30027"
+msgid "Bands"
+msgstr ""
+
+msgctxt "#30028"
+msgid "{0:d}"
+msgstr ""
