GL: Render: Fix perspective and add some settings Take account of display and pixel aspects and allow to change field size, tilt and base (bottom of bars). With zero tilt and negative base, perspective distortion can be entirely eliminated and all bars stand vertical then. With 90° tilt a funny bird's-eye view can be achieved. Additionally the size of the x*z-field can be changed. Smaller is useful for bird's-eye view and bigger for zero tilt with rotation fixed at 0° or 90° etc. Rotation speed setting is added too.

--- a/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
+++ b/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
@@ -114,3 +114,22 @@ msgctxt "#30021"
 msgid "{0:d} dB"
 msgstr ""
 
+msgctxt "#30022"
+msgid "Tilt"
+msgstr ""
+
+msgctxt "#30023"
+msgid "Base"
+msgstr ""
+
+msgctxt "#30024"
+msgid "{0:d}%"
+msgstr ""
+
+msgctxt "#30025"
+msgid "Field size"
+msgstr ""
+
+msgctxt "#30026"
+msgid "Rotation speed"
+msgstr ""
