GL: Add kissfft and use dB scaling Really implement spectrum analyser functionality A new setting allows one to set the dynamic range displayed to whatever is used in practice (up to 144 dB for full 24 bit audio)
Note: A new class KFFTR was derived from MRFFT used in other visualizations:
* discard DC bin
* fix hardcoded stereo (just sum up all channels)
* fix broken Hann window function (!)

--- a/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
+++ b/visualization.spectrum/resources/language/resource.language.en_gb/strings.po
@@ -105,3 +105,12 @@ msgstr ""
 msgctxt "#30019"
 msgid "Turn continuously"
 msgstr ""
+
+msgctxt "#30020"
+msgid "Dynamic range"
+msgstr ""
+
+msgctxt "#30021"
+msgid "{0:d} dB"
+msgstr ""
+
